# Coursework_Django

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
spam/: admin.py  models.py  servicies.py  urls.py  views.py
spam/management/commands/: start_mailing.py
spam/migrations/: 0001_initial.py  0002_alter_mailing_end_time_alter_mailing_first_send_time.py  0003_alter_mailing_options.py  0004_rename_attempt_time_mailingattempt_attempt_datetime.py  0005_mailing_owner.py  0006_usermailingstatistics.py  0007_alter_mailing_options_alter_recipient_options_and_more.py  0008_alter_mailing_options_alter_recipient_options.py  0009_message_owner.py  0010_recipient_owner.py  0011_alter_message_options_alter_recipient_options.py  0012_alter_mailing_options_alter_message_options.py  0013_alter_mailingattempt_options_alter_message_options.py  0014_mailingattempt_owner.py
spam/templates/spam/: base.html  home.html  mailing_attempt_list.html  mailing_block.html  mailing_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_start.html  message_delete.html  message_detail.html  message_from.html  message_list.html  recipient_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  user_statistics.html
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options.py  0003_alter_customuser_options.py  0004_alter_customuser_options.py  0005_alter_customuser_options.py  0006_alter_customuser_options.py  0007_customuser_is_blocked.py
users/templates/users/: change_password.html  (+6 more)
(+2 files in other folders)
