[tool.poetry]
name = "coursework-django"
version = "0.1.0"
description = ""
authors = ["Aleksandr <aqwa06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.3"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
redis = "^5.2.0"
ipython = "^8.29.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/

)
'''